@@ -4,14 +4,12 @@ import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.NoResultException;
 import jakarta.persistence.PersistenceContext;
-import ru.mephi.trainer.exception.TrainerNotFoundException;
-import ru.mephi.trainer.rest.dto.response.CompletedTaskTrainerPointResponse;
-import ru.mephi.trainer.rest.dto.response.TrainerProgressResponse;
+import ru.mephi.trainer.rest.dto.response.profile.CompletedTaskTrainerPointResponse;
+import ru.mephi.trainer.rest.dto.response.profile.TrainerProgressResponse;
 
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class TrainerProgressRepository {
@@ -21,17 +19,17 @@ public class TrainerProgressRepository {
 
     public Optional<TrainerProgressResponse> getTrainerProgress(UUID userId, UUID trainerId) {
         String sql = """
-                    SELECT 
+                    SELECT
                         t.id as trainer_id,
                         t.name as trainer_name,
                         COALESCE(SUM(ta.points), 0) as earned_score,
-                        COALESCE(SUM((task.config->>'points')::INTEGER), 0) as max_possible_score,
+                        COALESCE(SUM(CAST(task.config->>'points' AS INTEGER)), 0) as max_possible_score,
                         COUNT(DISTINCT ta.id) as tasks_completed,
                         COUNT(DISTINCT task.id) as total_tasks
                     FROM trainers t
                     LEFT JOIN tasks_trainers tt ON tt.trainer_id = t.id
                     LEFT JOIN tasks task ON task.id = tt.task_id
-                    LEFT JOIN task_attempts ta ON ta.task_id = task.id AND ta.user_id = ?1 AND ta.status = 'COMPLETED'
+                    LEFT JOIN task_attempts ta ON ta.task_id = tt.id AND ta.user_id = ?1 AND ta.status = 'COMPLETED'
                     WHERE t.id = ?2
                     GROUP BY t.id, t.name
                 """;
@@ -66,7 +64,7 @@ public class TrainerProgressRepository {
                         COALESCE(ta.points, 0) as point
                     FROM tasks t
                     JOIN tasks_trainers tt ON tt.task_id = t.id
-                    LEFT JOIN task_attempts ta ON ta.task_id = t.id AND ta.user_id = ?1 AND ta.status = 'COMPLETED'
+                    LEFT JOIN task_attempts ta ON ta.task_id = tt.id AND ta.user_id = ?1 AND ta.status = 'COMPLETED'
                     WHERE tt.trainer_id = ?2
                     ORDER BY t.created_at
                 """;
@@ -84,6 +82,6 @@ public class TrainerProgressRepository {
                     dto.setPoint(((Number) row[2]).intValue());
                     return dto;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 }
